--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  direction: rtl;
+}
+
 .App {
   text-align: center;
+  font-family: "Baloo Bhaijan 2";
 }
 
 .App-logo {
@@ -22,6 +29,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: "Baloo Bhaijan 2", cursive;
 }
 
 .App-link {
@@ -35,4 +43,29 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.toggle-button {
+  position: absolute;
+  top: 20px;
+  right: 20px; 
+  z-index: 10;
+  padding: 10px;
+  background-color: white;
+  border: 1px solid orange;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.side-panel {
+  position: absolute;
+  top: 20px;
+  left: 20px; 
+  width: 200px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  border-radius: 5px;
+  border: 1px solid orange;
 }
